Fixed main page overflow

--- a/Milestone/wwwroot/css/paperkit.css
+++ b/Milestone/wwwroot/css/paperkit.css
@@ -4031,13 +4031,13 @@ textarea.form-control {
     background: -webkit-linear-gradient(top, #FFFFFF 35%, #4e6773 100%);
     background: linear-gradient(to bottom, #FFFFFF 35%, #4e6773 100%);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+
 }
 
-.presentation-subtitle {
-    font-size: 1.7em;
-    color: #FFFFFF;
-}
+    .presentation-subtitle {
+        font-size: 1.7em;
+        color: #FFFFFF;
+    }
 
 .category-absolute {
     position: absolute;
